--- a/style.css
+++ b/style.css
@@ -25,61 +25,61 @@ body, html, textarea {
 #drag1 {
   left: 150px;
   top: 30px;
-  background: rgba(190, 0, 0, 0.53333);
+  background: rgba(190, 0, 0, 0.63333);
 }
 
 #drag2 {
   left: 300px;
   top: 30px;
-  background: rgba(180, 0, 0, 0.56667);
+  background: rgba(180, 0, 0, 0.66667);
 }
 
 #drag3 {
   left: 450px;
   top: 30px;
-  background: rgba(170, 20, 0, 0.6);
+  background: rgba(170, 20, 0, 0.7);
 }
 
 #drag4 {
   left: 600px;
   top: 30px;
-  background: rgba(160, 20, 0, 0.63333);
+  background: rgba(160, 20, 0, 0.73333);
 }
 
 #drag5 {
   left: 750px;
   top: 180px;
-  background: rgba(150, 20, 0, 0.66667);
+  background: rgba(150, 20, 0, 0.76667);
 }
 
 #drag6 {
   left: 0px;
   top: 180px;
-  background: rgba(140, 40, 100, 0.7);
+  background: rgba(140, 40, 100, 0.8);
 }
 
 #drag7 {
   left: 150px;
   top: 180px;
-  background: rgba(130, 40, 100, 0.73333);
+  background: rgba(130, 40, 100, 0.83333);
 }
 
 #drag8 {
   left: 300px;
   top: 180px;
-  background: rgba(120, 40, 100, 0.76667);
+  background: rgba(120, 40, 100, 0.86667);
 }
 
 #drag9 {
   left: 450px;
   top: 180px;
-  background: rgba(110, 60, 100, 0.8);
+  background: rgba(110, 60, 100, 0.9);
 }
 
 #drag10 {
   left: 600px;
   top: 330px;
-  background: rgba(100, 60, 100, 0.83333);
+  background: rgba(100, 60, 100, 0.93333);
 }
 
 textarea {
@@ -92,9 +92,13 @@ textarea {
   border: 0;
 }
 
-h1 {
+h1, h2, h3, h4 {
   font-size: 1.2em;
   margin: 0.2em 0;
+}
+
+h2, h4 {
+  font-style: italic;
 }
 
 ul {
