--- a/style.css
+++ b/style.css
@@ -3,6 +3,12 @@
   padding: 0;
 }
 
+body, html {
+  width: 100%;
+  height: 100%;
+  min-height: 100%;
+}
+
 body, html, textarea {
   font-family: Verdana, Arial;
   font-size: 16px;
@@ -11,7 +17,10 @@ body, html, textarea {
 }
 
 #wrapper {
-  position: relative;
+  width: 100%;
+  height: 100%;
+  min-height: 100%;
+  background: #eee;
 }
 
 .draggable {
@@ -87,9 +96,10 @@ textarea {
   height: 100%;
   resize: none;
   background: inherit;
-  pointer-events: none;
+  pointer-events: auto;
   outline: none;
   border: 0;
+  padding: 5px;
 }
 
 h1, h2, h3, h4 {
