--- a/style.css
+++ b/style.css
@@ -115,3 +115,16 @@ ul {
   list-style-position: inside;
   padding-left: 5px;
 }
+
+blockquote {
+  margin-left: 15px;
+}
+
+.marked {
+  /* width: 100%;
+  height: 100%; */
+  padding: 5px;
+  width: inherit;
+  height: inherit;
+  overflow: auto;
+}
