minor css change

--- a/style.css
+++ b/style.css
@@ -127,3 +127,8 @@ blockquote {
   height: inherit;
   overflow: auto;
 }
+hr{
+  border-style: solid;
+  border-color: #333; 
+  margin: 0 1em;
+}  
