--- a/style.css
+++ b/style.css
@@ -99,6 +99,8 @@ textarea {
   outline: none;
   border: 0;
   padding: 5px;
+  z-index: 2;
+  display: none;
 }
 
 h1, h2, h3, h4 {
@@ -126,6 +128,8 @@ blockquote {
   width: inherit;
   height: inherit;
   overflow: auto;
+  z-index: 1;
+  display: block;
 }
 hr{
   border-style: solid;
